# picoleto

./: .gitignore  Cargo.toml  LICENSE.md  README.md  example.config.json  picoleto.config.json  test.config.json
src/: aux.rs  config.rs  main.rs  notify_main.rs  old_main.rs
test/: regression.zsh
