[package]
name = "picoleto"
version = "0.1.0"
authors = ["George Hosu <george@cerebralab.com>"]

[dependencies]
inotify = { git = "https://github.com/hannobraun/inotify-rs", branch = "master" }
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"
clippy = {version = "*", optional = true}

[features]
default = []
